--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,4 +1,6 @@
-quote_style = "AutoPreferSingle"
-call_parentheses = "Input"
+column_width = 160
+line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
+quote_style = "AutoPreferSingle"
+call_parentheses = "None"
